--- a/HS/04.md
+++ b/HS/04.md
@@ -61,7 +61,70 @@ Druhy mac
 
 ## ARP
 
+Adress resolution protokol
+- používá datovou jednotku ARP rámec/packet
+- zajišťuje překlad IP na MAC
+- spravuje MAC tabulku = seznam známých vyzeb MAC a IP
+- záznamy nejsou trvalé, po uplynutí čas use odstraní
+  - čas záleží na systému
+- problémy s arp
+   - jedná se o broadcast = zahlcuje síť
+   - dá se jednoduše napadnout
+- řešení
+  - statické tabulky
+  - izolace povolení pro posílání
 
+Použití
+- pro poslání rámce musíme znát MAC
+- pokud se jedná o zařízení v naší síti pošleme ARP dotaz
+- pkud se jendá o zařízení v jiné síti, pošleme to default gateway a ta pošle dotaz v další síti
+
+ARP packet
+- Hw type = typ technologie(ethernet)
+- protokol type = o jaký protokol se jedná (IPv4)
+- Hw lenght = délka fyzické adresy
+- Protokol lenght = délka ip adresy
+- operace = request/reply
+- mac odesílatel
+- IP odesílatele
+- mac příjemce
+- IP příjemce
+
+IPv6 Neighbour discovery
+- stejný cíl jako ARP
+- objevení routeru = router discovery
 
 ## switch - základní principy, metody předávání rámců
+
+Princip
+- pracuje na 2. vrstvě
+- nezávyslý na přenášeném protokolu
+- spravuje vlastní MAC tabulku (CAM table)
+- má dva základní stavy
+  - learning
+    - zkontroluje rámec jestli neni nový
+    - pokud ne, přejde na forwarding
+    - pokud ano, zapíše si zdrojovou MAC a příchozí interface do MAC tabulky
+    - pokud záznam již v tabulce existuje, ale na jiném interfacu, tak ho přepíše
+  - forwarding
+    - pokud se jedná o broadcast pošle ho na všechny interfacy kromě příchozího
+    - pokud se jedná o unicast a zná MAC, tak ho pošle na daný interface
+    - pokud MAC nezná, pošle rámec na všechny interface kromě příchozího = unknown unicast
+
+metody forwardování
+- store and forward = přijme celý rámec, vypočte kontrolní součet a pak ho pošle
+    - je to pomalý
+    - neobsahuje chyby
+- cut through = rámec se pošle dřív, než je celý přijat
+  - fast forward = posílá ihned po načtení cílové adresy
+  - fragment free = načte prvních 64 bajtů a pak ho posílá
+    - vždy se jedná o validní rámec, i když s chybou
+    - nejvíc chyb se nachází v prvních 64 bajtech
+
+duplex a rychlost
+- důležitá je šířka pásma a duplex režim
+- tohle musí souhlasit na obou stranách kabelu
+- většina NIC podporuje autonegotiation = obě strany se automaticky dohodnou na parametrech
+
+
 
