--- a/HS/05.md
+++ b/HS/05.md
@@ -72,3 +72,46 @@ IGMP = internet group management protokol
 
 ## princip packetového přenosu dat
 
+Hlavička IPv4 packetu
+
+![alt text](https://github.com/zyt4/maturita/blob/6daa2f48267c77c1a4657f26e4baf3ba849c0a09/obrazky/IPv4_packte.jpg)
+
+- verze = identifikuje, že se jedná o IPv4
+- DS = určuje prioritu packetu
+- Kontrolní součet = detekuje poškození v hlavičce
+- Time To Live = životnost packetu, kolik skoků může udělat, než vyprší
+  - při každém skoku se odečte 1, pokud se rovná 0, packet je zahozen
+- Protokol = jaký protokol je zapouzdřený (UDP, TCP, data, ICMP)
+- Zdrojová IP = unicast IP odesílatele
+- Cílová IP = unicast, multicast, broadcast
+
+Hlavička IPv6 packetu
+
+![alt text](https://github.com/zyt4/maturita/blob/6daa2f48267c77c1a4657f26e4baf3ba849c0a09/obrazky/IPv6_packte.jpg)
+
+- verze = označuje jako IPv6
+- Traffic class = něco jako DS
+- Payload lenght = délka dat
+- next header = zapouzdřený protokol
+- hop limit = to samý jako TTL
+- Zdrojová IP
+- Destinatin IP
+
+Rozhodování na hostovy
+- sám sobě = pošle to sobě
+- místní hosti = opšle arp a pošle to přímo
+- vzdálení hosti = pošle to na default gateway
+
+Default gateway
+- router nebno L3 switch
+- musí být ve stejném rozsahu
+- routuje do jiných sítí
+- hranice mezi sítěma
+
+Rozhodování na routeru
+- je přímo připojená = pošlu to přímo do cíle
+- je vzdálená = pošlu to na router, který je blíž k cíli
+- nevim = pošlu to defaultní routou někam, tam si s tím poradí
+- statický routing = musí se všechno zadat, pokud je chyby v cestě, stejně to tam pošle
+- dinymický routing = cesty se uží sám, chyby v cestě si všimne a pošle to jinudy 
+
