--- a/HS/05.md
+++ b/HS/05.md
@@ -74,7 +74,7 @@ IGMP = internet group management protokol
 
 Hlavička IPv4 packetu
 
-![alt text](https://github.com/zyt4/maturita/blob/6daa2f48267c77c1a4657f26e4baf3ba849c0a09/obrazky/IPv4_packte.jpg)
+![alt text](/obrazky/IPv4_packte.jpg)
 
 - verze = identifikuje, že se jedná o IPv4
 - DS = určuje prioritu packetu
