--- a/HS/05.md
+++ b/HS/05.md
@@ -87,7 +87,7 @@ Hlavička IPv4 packetu
 
 Hlavička IPv6 packetu
 
-![alt text](https://github.com/zyt4/maturita/blob/6daa2f48267c77c1a4657f26e4baf3ba849c0a09/obrazky/IPv6_packte.jpg)
+![alt text](/obrazky/IPv6_packte.jpg)
 
 - verze = označuje jako IPv6
 - Traffic class = něco jako DS
