--- a/HS/04.md
+++ b/HS/04.md
@@ -19,7 +19,7 @@ Charakteristika Ethernetu
 Rámec Ethernetu
 - skládá se z hlavičky, dat a patičky
 
-![alt text](https://github.com/zyt4/maturita/blob/b559931a085076d4a1a9bf8d2dcf7c271059d0fe/obrazky/ramec.png)
+![alt text](/obrazky/ramec.png)
  
 - preambule = informuje pocílový pc, že přijde rámec, SFD = odděluje od zbytku packetu
 - Cílová a zdrojová mac
