--- a/CJ/10_1984.md
+++ b/CJ/10_1984.md
@@ -15,7 +15,28 @@
 - er forma
 - děj se odehrává chronologicky s prvky retrospektivy
 - postavy:
+  - winston smith = hlavní hrdina, nesouhlasí s ideologií, přemýšlí, co bylo před diktaturou
+  - julie = tváří se jako věrná straně
+  - obrian = dělá jako že je proti straně, ale je s ní, odhalí jejich ideozločin
+  - charrington = majitel vetešnictví, pronajímá "bezobrazovkový" pokoj
+  - goldstein = nepřítel a zrádce strany
+  - velký bratr = fiktivní posatava, vůdce strany, něco jako jejich bůh, má vždy pravdu
 - obsah:
+
+Děj se odehrává v roce 1984. Hlavním hrdinou je devětatřicetiletý Winston Smith, úředník žijící v Londýně, hlavním městě Oceánie. V zemi vládne tvrdá totalita, v jejímž čele stojí Strana s tzv. Velkým bratrem, vyznávající ideologii Angsoc. Její hlavní hesla zní: válka je mír, svoboda je otroctví, nevědomost je síla. Obyvatelstvo se dělí na představitele Vnitřní strany, kteří vládnou a jako jediní si užívají dostatku a luxusu, Vnější strany, kteří pro Stranu pracují, a chudé vrstvy – proléty. Občané nemají žádné svobody nebo nárok na svobodné uvažování a musí uctívat Velkého bratra. Jejich činy hlídá Ideopolicie. V bytech jsou zabudovány obrazovky fungující také jako kamery, které nejdou vypnout. Strana zavádí nový jazyk – newspeak, který má znemožnit vyslovení nežádoucích myšlenek. Svět je rozdělen na tři velmoci – Oceánii, Eurasii a Eastasii, které mezi sebou vedou neustálou válku.
+
+Winston pracuje jako úředník na Ministerstvu pravdy, kde opravuje dokumenty, aby odpovídaly aktuálním informacím. Uvědomuje si, že nesouhlasí s ideologií Strany a chce proti ní bojovat. Domnívá se, že jeho názor sdílí také O’Brien, člen Vnitřní strany. V této době se rovněž sblíží s dívkou Julií a začnou se tajně stýkat. Sejde se s O’Brienem, půjčí si od něho knihu Emanuela Goldsteina, hlavního odpůrce Strany, a Winston přislíbí věrnost spliklenecké organizaci Bratrstvu.
+
+Jednoho dne jsou ale Winston s Julií zatčeni a posláni do cel na Ministerstvu lásky. Winston prochází sérií mučení a vyslýchání, u něhož asistuje právě O’Brien, který tedy ve skutečnosti stojí na straně Velkého bratra. Winston mu vše přizná, projde vymýváním mozku a postupně přijímá učení Strany a skutečně začne Velkého bratra milovat. Představuje, že je zastřelen, ale stále se nachází v kavárně. Není explicitně řečeno, že umřel – celá kniha v sobě má mnoho nezodpovězených otázek, aby byla navozena atmosféra, toto je jedna z nich.
+
+hlavní věci
+- ministerstvopravdy = manipuluje minulostí
+- ministerstvo lásky = určuje manželství
+- ideopolicie
+- vnitřní strana = skutečná vláda
+- vnější strana = vykonává vůli stýtu
+- Oceánie, Eurasie, Eastasie
+- newspeak = nový jazyk, ořezaný co to jde
 
 ## výňatek
 
