--- a/CJ/10_1984.md
+++ b/CJ/10_1984.md
@@ -57,6 +57,9 @@ hlavní věci
   - Farma zvířat
   - Barmské dny
   - Farářova dcera
-- literární směr: 
-- další umělci jeho doba(směru)
+- literární směr: poválečná
+  - zakázaný autor
+- další umělci
+  - samuel becket (čekání na godota)
+  - Karel Čapek
 
