--- a/HS/02.md
+++ b/HS/02.md
@@ -2,15 +2,38 @@
 
 ## princip přenosu dat v počítačové síti
 
-
+Data z aplikace musí projít všemy vrstvami v TCP/IP modelu.
+Zde jsou dělena, transformována a zapouzdřena pro přenos
+jakmile přejdou na médium, prvky cestou podle informací při zapouzdření rozhodnou kam data budou putoat.
+Když se dostanou k příjemci, musí opět projít TCP/IP modelem, ale v opačné pořadí
+zde jsou rozpouzdřena, seřazena, převedana do formátu pro čitelného pro aplikaci
 
 ## komunikační protokoly a jejich funkce
 
+Protokoly slouží k sjednocení komunikace, aby ji mohly rozumět všechny zařízení
 
+Jelikož, pokud by každý používal jiné protokoly a standardy, bylo by to jako kdybychom na sebe mluvili jiným jazykem.
+
+Máme různé protokoly
+- některé nám určují formát dat pro aplikace
+- jinám nám pomáhají s adresací a doručením dat příjemci
+- a další nám převádějí data tak, aby se dali vůbec poslat po médiu
 
 ## síťové modely ISO/OSI a TCP/IP a jejich protokoly
 
+ISO/OSI = jedná se o referenční model pro standardizaci protokolů
 
+TCP/IP = model, který řídí komunikaci v síti
+
+![porovnání](/obrazky/modely.jpg)
 
 ## standardizační organizace
 
+- internet society **ISOC** = zodpovědná za otevřený rozvoj internetu
+- internet architecture board **IAB** = celková správa a vývoj protokolů
+- internet engeneering taks force **IETF** = vyvýjí a aktualizuje TCP/IP technologie
+- internet research tasks force **IRFT** = dlouhodobý výzkum související s internetem
+- Internet corporatin for assigned numbers **ICANN** = přiděluje IP adresy
+- internet assigned numbers authority **IANA** = zodpovídá za ICANN
+- **IEEE** = věnují se všelijakým (802.11 wifi, 802.3 ethernet)
+- EIA TIA = komunikační standardy a média
